--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   dbpostgres:
     image: postgres
     ports:
-      - "5432:5432"
+      - {{ cookiecutter.postgres_port }}:{{ cookiecutter.postgres_port }}
     environment:
       POSTGRES_USER: {{ cookiecutter.postgres_user }}
       POSTGRES_PASSWORD: {{ cookiecutter.postgres_password }}
